RESOLVED FIXED 198418
REGRESSION(r244182): [CoordinatedGraphics] Related view doesn't receive graphic updates
https://bugs.webkit.org/show_bug.cgi?id=198418
Summary REGRESSION(r244182): [CoordinatedGraphics] Related view doesn't receive graph...
Carlos Garcia Campos
Reported 2019-05-31 05:28:24 PDT
This is because we need a DisplayRefreshMonitor per drawing area, but the one from the first ThreradedCompositor is always reused because they use the same display ID.
Attachments
Patch (5.26 KB, patch)
2019-05-31 05:32 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2019-05-31 05:32:38 PDT
Zan Dobersek
Comment 2 2019-05-31 06:17:52 PDT
Comment on attachment 371051 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=371051&action=review > Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:549 > + m_webPage.windowScreenDidChange(std::numeric_limits<uint32_t>::max() - m_webPage.pageID().toUInt64()); If you can find a better way to make that page ID into a 32-bit, then go ahead.
Carlos Garcia Campos
Comment 3 2019-05-31 06:23:53 PDT
(In reply to Zan Dobersek from comment #2) > Comment on attachment 371051 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=371051&action=review > > > Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:549 > > + m_webPage.windowScreenDidChange(std::numeric_limits<uint32_t>::max() - m_webPage.pageID().toUInt64()); > > If you can find a better way to make that page ID into a 32-bit, then go > ahead. I'm following the same approach as mac port.
Carlos Garcia Campos
Comment 4 2019-06-03 01:07:12 PDT
Note You need to log in before you can comment on or make changes to this bug.